--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
